// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Demo form 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="sc-fzXfMx dXtnjn"
    >
      <h2
        class="sc-AykKH dIrZHw"
        font-size="26px"
        font-weight="500"
      >
        Job 324400
      </h2>
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC hEeuHN sc-fzXfLS PPCpw"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD fYtHvm"
          color="#cc1439"
          fill="#cc1439"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 jRfwdL"
        >
          <p
            class="sc-AykKF frKGrq"
            color="currentColor"
            font-size="16px"
            font-weight="bold"
          >
            Errors have occured ...
          </p>
          <p
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
            Instructions and description of errors
          </p>
          <ul
            class="List-sc-1cqkmnl-0 fopWsv"
            color="currentColor"
          >
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              Affected field
            </li>
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              Unmet criteria
            </li>
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              <a
                href="https://nulogy.design/"
              >
                Affected field
              </a>
            </li>
          </ul>
        </div>
      </div>
      <fieldset
        class="sc-fzXfMw iAKzA-d"
      >
        <legend
          class="sc-AykKI sc-AykKJ sc-fzXfMv bUxjSG"
          font-size="20px"
          font-weight="500"
        >
          Job Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="project"
                  placeholder="Project 128703"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project description
              </span>
              <span
                class="sc-AykKF bNiwGI"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="sc-AykKF sc-fzXfLV kckwMb"
                color="currentColor"
                font-size="16px"
              >
                Project description helps identify the project.
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="project-description"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Project status
              </span>
            </div>
            <div
              class=" css-2b097c-container"
            >
              <div
                class=" css-1liu8yu-Control"
              >
                <div
                  class=" css-7zc8my"
                >
                  <div
                    class=" css-1yhx6vz-Placeholder"
                  >
                    select ...
                  </div>
                  <div
                    class="css-17yls17-Input"
                  >
                    <div
                      class=""
                      style="display:inline-block"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="project-status"
                        spellcheck="false"
                        style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-43ykx9-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1fi275-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Item code
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="true"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gpgWan"
                  id="item-code"
                  value="WS2SB6"
                />
              </div>
            </div>
          </label>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bnFjvb"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="sc-AykKD bNpWy"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 iXAlLy"
            >
              <p
                class="sc-AykKF jKbmDj"
                color="currentColor"
                font-size="16px"
              >
                Item WS2SB6 does not exist.
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Eaches expected on Job
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="eaches-expected"
                  placeholder="2 000"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Eaches remaining on Project
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 hKYeEh"
                  disabled=""
                  id="eaches-remaining"
                  value="18 000"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Scheduled start
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="scheduled-start"
                  placeholder="MMM-DD-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Scheduled end
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="scheduled-end"
                  placeholder="MMM-DD-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <fieldset
          class="Fieldset-sc-9aoml1-0 SrOR sc-fzXfNd cniYLL"
        >
          <legend
            style="margin-bottom:8px"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Line Lead
            </span>
            <span
              class="sc-AykKF bNiwGI"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </legend>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
          >
            <label
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
                name="linelead"
                type="checkbox"
                value="christiaan"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
              />
              <p
                class="sc-AykKF jKbmDj"
                color="currentColor"
                font-size="16px"
              >
                Christiaan Oostenbrug
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
          >
            <label
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
                name="linelead"
                type="checkbox"
                value="matt"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
              />
              <p
                class="sc-AykKF jKbmDj"
                color="currentColor"
                font-size="16px"
              >
                Matt Dunn
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
          >
            <label
              class="ClickInputLabel-j2axnv-0 jxKJCC"
              disabled=""
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 gYNwWa sc-fzXfNc bSPfCk"
                disabled=""
                name="linelead"
                type="checkbox"
                value="clemens"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                disabled=""
              />
              <p
                class="sc-AykKF gRcVjH"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Clemens Park
              </p>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
          >
            <label
              class="ClickInputLabel-j2axnv-0 jxKJCC"
              disabled=""
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="Checkbox__CheckboxInput-sc-1nm58f1-1 gYNwWa sc-fzXfNc bSPfCk"
                disabled=""
                name="linelead"
                type="checkbox"
                value="nikola"
              />
              <div
                class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
                disabled=""
              />
              <p
                class="sc-AykKF gRcVjH"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Nikola Pejcic
              </p>
            </label>
          </div>
        </fieldset>
        <fieldset
          class="Fieldset-sc-9aoml1-0 SrOR sc-fzXfNf cnzRUd"
          id="reconcile"
        >
          <legend
            style="margin-bottom:8px"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Reconcile
            </span>
          </legend>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
          >
            <label
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <input
                aria-invalid="true"
                aria-required="false"
                checked=""
                class="Radio__RadioInput-sc-82dpxx-1 ciJsGK sc-fzXfNe kVFKSZ"
                name="settingSelection"
                type="radio"
                value="yes"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
              />
              <span
                class="sc-AykKF jKbmDj"
                color="currentColor"
                font-size="16px"
              >
                 Yes 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
          >
            <label
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <input
                aria-invalid="true"
                aria-required="false"
                class="Radio__RadioInput-sc-82dpxx-1 ciJsGK sc-fzXfNe kVFKSZ"
                name="settingSelection"
                type="radio"
                value="no"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
              />
              <span
                class="sc-AykKF jKbmDj"
                color="currentColor"
                font-size="16px"
              >
                 No 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
          >
            <label
              class="ClickInputLabel-j2axnv-0 jxKJCC"
              disabled=""
            >
              <input
                aria-invalid="true"
                aria-required="false"
                class="Radio__RadioInput-sc-82dpxx-1 bzuiei sc-fzXfNe kVFKSZ"
                disabled=""
                name="settingSelection"
                type="radio"
                value="maybe"
              />
              <div
                class="Radio__VisualRadio-sc-82dpxx-0 dWBwrU"
                disabled=""
              />
              <span
                class="sc-AykKF gRcVjH"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                 Maybe 
              </span>
            </label>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bnFjvb"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="sc-AykKD bNpWy"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 iXAlLy"
            >
              <p
                class="sc-AykKF jKbmDj"
                color="currentColor"
                font-size="16px"
              >
                Only yes can be selected...
              </p>
            </div>
          </div>
        </fieldset>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB sc-fzXfNg dHJaZc"
        >
          <div
            id="Job Visibility-label"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Job Visibility
              </span>
            </div>
            <div
              class="ClickInputLabel-j2axnv-0 hdKIjC"
            >
              <div
                class="ToggleButton__Switch-asgrb8-1 evdDoW"
              >
                <input
                  aria-labelledby="Job Visibility-label"
                  aria-required="false"
                  class="ToggleButton__ToggleInput-asgrb8-2 bRfwtk"
                  id="job-visibility"
                  type="checkbox"
                  value="on"
                />
                <span
                  class="ToggleButton__Slider-asgrb8-0 bExZFy"
                />
              </div>
              <p
                class="sc-AykKF bqQwZK"
                color="currentColor"
                font-size="16px"
              >
                Hidden
              </p>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzXfMw iAKzA-d"
      >
        <legend
          class="sc-AykKI sc-AykKJ sc-fzXfMv bUxjSG"
          font-size="20px"
          font-weight="500"
        >
          Rejects
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Item
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="true"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gpgWan"
                  id="items"
                  value="235432"
                />
              </div>
            </div>
          </label>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bnFjvb"
            color="#cc1439"
          >
            <svg
              aria-hidden="true"
              class="sc-AykKD bNpWy"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="error"
              mr="x1"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <div
              class="InlineValidation__Wrapper-sc-1jic7dw-0 iXAlLy"
            >
              <p
                class="sc-AykKF jKbmDj"
                color="currentColor"
                font-size="16px"
              >
                Item 235432 is not a valid entry
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Quantity
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="quantity"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB sc-fzXfNg dHJaZc"
        >
          <div
            id="Reject visibility-label"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Reject visibility
              </span>
            </div>
            <div
              class="ClickInputLabel-j2axnv-0 jxKJCC"
              disabled=""
            >
              <div
                class="ToggleButton__Switch-asgrb8-1 evdDoW"
              >
                <input
                  aria-labelledby="Reject visibility-label"
                  aria-required="false"
                  class="ToggleButton__ToggleInput-asgrb8-2 bdUrci"
                  disabled=""
                  id="reject-visibility"
                  type="checkbox"
                  value="on"
                />
                <span
                  class="ToggleButton__Slider-asgrb8-0 bzNtZY"
                  disabled=""
                />
              </div>
              <p
                class="sc-AykKF ASBTe"
                color="currentColor"
                disabled=""
                font-size="16px"
              >
                Hidden
              </p>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form Form 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="sc-fzXfMx dXtnjn"
    >
      <h2
        class="sc-AykKH dIrZHw"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Name
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="name"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Date of birth
            </span>
            <span
              class="sc-AykKF bNiwGI"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
            <p
              class="sc-AykKF sc-fzXfLV kckwMb"
              color="currentColor"
              font-size="16px"
            >
              Enter a date below
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="birthdate"
                placeholder="DD-MM-YYYY"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Place of birth
            </span>
            <span
              class="sc-AykKF bNiwGI"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="birthplace"
              />
            </div>
          </div>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form With form sections 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="sc-fzXfMx dXtnjn"
    >
      <h2
        class="sc-AykKH dIrZHw"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <fieldset
        class="sc-fzXfMw iAKzA-d"
      >
        <legend
          class="sc-AykKI sc-AykKJ sc-fzXfMv bUxjSG"
          font-size="20px"
          font-weight="500"
        >
          Personal Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Name
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Date of birth
              </span>
              <span
                class="sc-AykKF bNiwGI"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="sc-AykKF sc-fzXfLV kckwMb"
                color="currentColor"
                font-size="16px"
              >
                Enter a date below
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="birthdate"
                  placeholder="DD-MM-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Place of birth
              </span>
              <span
                class="sc-AykKF bNiwGI"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="birthplace"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzXfMw iAKzA-d"
      >
        <legend
          class="sc-AykKI sc-AykKJ sc-fzXfMv bUxjSG"
          font-size="20px"
          font-weight="500"
        >
          General Information
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Gender
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="gender"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Occupation
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="occupation"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form With form sections without titles 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="sc-fzXfMx dXtnjn"
    >
      <h2
        class="sc-AykKH dIrZHw"
        font-size="26px"
        font-weight="500"
      >
        New Profile
      </h2>
      <fieldset
        class="sc-fzXfMw jAYmwL"
      >
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Name
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Date of birth
              </span>
              <span
                class="sc-AykKF bNiwGI"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
              <p
                class="sc-AykKF sc-fzXfLV kckwMb"
                color="currentColor"
                font-size="16px"
              >
                Enter a date below
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="birthdate"
                  placeholder="DD-MM-YYYY"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Place of birth
              </span>
              <span
                class="sc-AykKF bNiwGI"
                color="darkGrey"
                font-size="12px"
              >
                (Optional)
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="birthplace"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzXfMw jAYmwL"
      >
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Gender
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="gender"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <label
            class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
            color="#011e38"
            style="display:block"
          >
            <div
              class="Box-sc-1qu1edy-0 iPmvAN"
            >
              <span
                style="font-size:14px;font-weight:600;line-height:1.71428571"
              >
                Occupation
              </span>
            </div>
            <div
              class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
            >
              <div
                class="Box-sc-1qu1edy-0 klanzh"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-required="false"
                  class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                  id="occupation"
                />
              </div>
            </div>
          </label>
        </div>
      </fieldset>
    </form>
  </div>
</div>
`;

exports[`Storyshots Form Without title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="sc-fzXfMx UmbCT"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Name
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="name"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Date of birth
            </span>
            <span
              class="sc-AykKF bNiwGI"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
            <p
              class="sc-AykKF sc-fzXfLV kckwMb"
              color="currentColor"
              font-size="16px"
            >
              Enter a date below
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="birthdate"
                placeholder="DD-MM-YYYY"
              />
            </div>
          </div>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Place of birth
            </span>
            <span
              class="sc-AykKF bNiwGI"
              color="darkGrey"
              font-size="12px"
            >
              (Optional)
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                id="birthplace"
              />
            </div>
          </div>
        </label>
      </div>
    </form>
  </div>
</div>
`;
